Added container info and bug fixes

--- a/Virtual's Custom Quest Loader/database/locales/en/gambler_locale.json
+++ b/Virtual's Custom Quest Loader/database/locales/en/gambler_locale.json
@@ -1,6 +1,5 @@
 {
     "gambler_intro task_1": "Find a White Poker Chip in raid",
-    "gambler_intro task_2": "Find a Red Poker Chip in raid",
     "gambler_intro name": "Welcome To The Gambling Life",
     "gambler_intro description": "So you want to gamble your roubles? Well, you've come to the right place. I'm known as the Gambler around these parts of Tarkov and I can help you get started on your journey on scoring it big. But first, I have a few tasks to test your skill, complete them and you'll be rewarded handsomely and unlock new gambling opportunities. Before Tarkov became the trechoroous and dangerous warzone it is today, I owned a lavish casino with many tables to wage bets, but that is now gone. My precious poker chips are scattered around Tarkov and I need you to find them for me. They can be found anywhere in Tarkov, lately I've hear they are scattered in loot stashes. Once you have one, come back to me and I'll compensate you for your hard work. Good luck out there.",
     "gambler_intro successMessagetext": "I see you found the chips, I don't care if you stole them off a scav or found them in a pile of trash, you have them and that's all that matters. Welcome to the gambling life kid. I have few new barters and items you can purchase with your new hard earned poker chips. Find more in the future and you can spend them here.",
@@ -100,65 +99,74 @@
     "gambler_ammo_part_10 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_10 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
+
     "gambler_ammo_part_11 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_11 task_2": "Hand Over 23x75 Zvezda Flashbang Rounds",
-    "gambler_ammo_part_11 task_3": "Hand Over 23x75 Shrapnel-10 Buckshot Rounds",
-    "gambler_ammo_part_11 task_4": "Hand Over 23x75 Barrikada Rounds",
-    "gambler_ammo_part_11 name": "Ammo Gambling - 23x75",
+    "gambler_ammo_part_11 task_2": "Hand Over 4.6x30 Subsonic SX  Rounds",
+    "gambler_ammo_part_11 task_3": "Hand Over 4.6x30 FMJ SX Rounds",
+    "gambler_ammo_part_11 task_4": "Hand Over 4.6x30 AP SX Rounds",
+    "gambler_ammo_part_11 name": "Ammo Gambling - 4.6x30",
     "gambler_ammo_part_11 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_11 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
     "gambler_ammo_part_12 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_12 task_2": "Hand Over 7.62x39 SP Rounds",
-    "gambler_ammo_part_12 task_3": "Hand Over 7.62x39 PS gzh Rounds",
-    "gambler_ammo_part_12 task_4": "Hand Over 7.62x39 PP gzh Rounds",
-    "gambler_ammo_part_12 task_5": "Hand Over 7.62x39 BP gzh Rounds",
-    "gambler_ammo_part_12 name": "Ammo Gambling - 7.62x39",
+    "gambler_ammo_part_12 task_2": "Hand Over 23x75 Zvezda Flashbang Rounds",
+    "gambler_ammo_part_12 task_3": "Hand Over 23x75 Shrapnel-10 Buckshot Rounds",
+    "gambler_ammo_part_12 task_4": "Hand Over 23x75 Barrikada Rounds",
+    "gambler_ammo_part_12 name": "Ammo Gambling - 23x75",
     "gambler_ammo_part_12 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_12 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
     "gambler_ammo_part_13 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_13 task_2": "Hand Over 9x39 SP-5 gs Rounds",
-    "gambler_ammo_part_13 task_3": "Hand Over 9x39 SP-6 gs Rounds",
-    "gambler_ammo_part_13 task_4": "Hand Over 9x39 PAB-9 gs Rounds",
-    "gambler_ammo_part_13 task_5": "Hand Over 9x39 BP gs Rounds",
-    "gambler_ammo_part_13 name": "Ammo Gambling - 9x39",
+    "gambler_ammo_part_13 task_2": "Hand Over 7.62x39 SP Rounds",
+    "gambler_ammo_part_13 task_3": "Hand Over 7.62x39 PS gzh Rounds",
+    "gambler_ammo_part_13 task_4": "Hand Over 7.62x39 PP gzh Rounds",
+    "gambler_ammo_part_13 task_5": "Hand Over 7.62x39 BP gzh Rounds",
+    "gambler_ammo_part_13 name": "Ammo Gambling - 7.62x39",
     "gambler_ammo_part_13 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_13 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
     "gambler_ammo_part_14 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_14 task_2": "Hand Over 12.7x55 PS12A Rounds",
-    "gambler_ammo_part_14 task_3": "Hand Over 12.7x55 PS12 Rounds",
-    "gambler_ammo_part_14 task_4": "Hand Over 12.7x55 PS12B Rounds",
-    "gambler_ammo_part_14 name": "Ammo Gambling - 12.7x55",
+    "gambler_ammo_part_14 task_2": "Hand Over 9x39 SP-5 gs Rounds",
+    "gambler_ammo_part_14 task_3": "Hand Over 9x39 SP-6 gs Rounds",
+    "gambler_ammo_part_14 task_4": "Hand Over 9x39 PAB-9 gs Rounds",
+    "gambler_ammo_part_14 task_5": "Hand Over 9x39 BP gs Rounds",
+    "gambler_ammo_part_14 name": "Ammo Gambling - 9x39",
     "gambler_ammo_part_14 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_14 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
     "gambler_ammo_part_15 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_15 task_2": "Hand Over 7.62x54 LPS gzh Rounds",
-    "gambler_ammo_part_15 task_3": "Hand Over 7.62x54 PS gzh Rounds",
-    "gambler_ammo_part_15 task_4": "Hand Over 7.62x54 BT gzh Rounds",
-    "gambler_ammo_part_15 task_5": "Hand Over 7.62x54 SNB gzh Rounds",
-    "gambler_ammo_part_15 name": "Ammo Gambling - 7.62x54",
+    "gambler_ammo_part_15 task_2": "Hand Over 12.7x55 PS12A Rounds",
+    "gambler_ammo_part_15 task_3": "Hand Over 12.7x55 PS12 Rounds",
+    "gambler_ammo_part_15 task_4": "Hand Over 12.7x55 PS12B Rounds",
+    "gambler_ammo_part_15 name": "Ammo Gambling - 12.7x55",
     "gambler_ammo_part_15 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_15 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
     "gambler_ammo_part_16 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_16 task_2": "Hand Over 7.62x51 M80 Rounds",
-    "gambler_ammo_part_16 task_3": "Hand Over 7.62x51 M62 Tracer Rounds",
-    "gambler_ammo_part_16 task_4": "Hand Over 7.62x51 M61 Rounds",
-    "gambler_ammo_part_16 task_5": "Hand Over 7.62x51 M993 Rounds",
-    "gambler_ammo_part_16 name": "Ammo Gambling - 7.62x51",
+    "gambler_ammo_part_16 task_2": "Hand Over 7.62x54 LPS gzh Rounds",
+    "gambler_ammo_part_16 task_3": "Hand Over 7.62x54 PS gzh Rounds",
+    "gambler_ammo_part_16 task_4": "Hand Over 7.62x54 BT gzh Rounds",
+    "gambler_ammo_part_16 task_5": "Hand Over 7.62x54 SNB gzh Rounds",
+    "gambler_ammo_part_16 name": "Ammo Gambling - 7.62x54",
     "gambler_ammo_part_16 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
     "gambler_ammo_part_16 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
 
     "gambler_ammo_part_17 task_1": "Hand Over Red Poker Chips",
-    "gambler_ammo_part_17 task_2": "Hand Over .338 UCW Rounds",
-    "gambler_ammo_part_17 task_3": "Hand Over .338 FMJ Rounds",
-    "gambler_ammo_part_17 task_4": "Hand Over .338 AP Rounds",
-    "gambler_ammo_part_17 name": "Ammo Gambling - .338 Lapua Magnum",
-    "gambler_ammo_part_17 description": "Hey kid, You caught me in a good mood, I'll offer you a gamble for the best rounds in Tarkov, only if you offer me some of the finest rounds. Hand over a few rounds of .338 Lapua Magnum and a rare poker chip, and I'll offer you a new mystery box to gamble for. Good Luck!",
-    "gambler_ammo_part_17 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov."
+    "gambler_ammo_part_17 task_2": "Hand Over 7.62x51 M80 Rounds",
+    "gambler_ammo_part_17 task_3": "Hand Over 7.62x51 M62 Tracer Rounds",
+    "gambler_ammo_part_17 task_4": "Hand Over 7.62x51 M61 Rounds",
+    "gambler_ammo_part_17 task_5": "Hand Over 7.62x51 M993 Rounds",
+    "gambler_ammo_part_17 name": "Ammo Gambling - 7.62x51",
+    "gambler_ammo_part_17 description": "Hey kid, I have an offer for you to help you survive your future raids. Hand over a few rounds of .45 ACP and a poker chip, and I'll offer you a new mystery box to gamble for. I assure you, you won't be disappointed with the rewards. Good luck out there.",
+    "gambler_ammo_part_17 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov.",
+
+    "gambler_ammo_part_18 task_1": "Hand Over Red Poker Chips",
+    "gambler_ammo_part_18 task_2": "Hand Over .338 UCW Rounds",
+    "gambler_ammo_part_18 task_3": "Hand Over .338 FMJ Rounds",
+    "gambler_ammo_part_18 task_4": "Hand Over .338 AP Rounds",
+    "gambler_ammo_part_18 name": "Ammo Gambling - .338 Lapua Magnum",
+    "gambler_ammo_part_18 description": "Hey kid, You caught me in a good mood, I'll offer you a gamble for the best rounds in Tarkov, only if you offer me some of the finest rounds. Hand over a few rounds of .338 Lapua Magnum and a rare poker chip, and I'll offer you a new mystery box to gamble for. Good Luck!",
+    "gambler_ammo_part_18 successMessagetext": "I see you've brought me the rounds and the poker chip, good job. Here is your new mystery box, I hope you find it useful in your future raids. May you find the best loot in Tarkov."
 
 
 
